--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         <form id="form">
             <h1>Visszajelzés</h1>
             <div class="cont">
-            <input type="text" placeholder="Tárgy">
-            <textarea placeholder="Megjegyzés"></textarea></div>
+                <input type="text" placeholder="Tárgy">
+                <textarea placeholder="Megjegyzés"></textarea>
+            </div>
             <div class="checkbox">
                 <input type="checkbox"> 
-                <p>Elolvastam és elfogadom az <a>Adatkezelési Tájékoztatót</a></p>
+                <p>Elolvastam és elfogadom az <a>Adatkezelési Tájékoztatót.</a></p>
             </div>
         
             <button>Mentés</button>
